syntax = "proto3";
option csharp_namespace = "TaskService";
service Task{
    rpc CreateTask(TaskDescription)returns (Response);
    rpc DeleteTask(RequestData)returns (Response);
    rpc ShowMyTask(Request)returns (TaskResponse);
    rpc AddExecutor(RequestData) returns (Response);
    rpc ShowTaskExecutors(RequestData) returns (UserResponse);
    rpc DeleteExecutor(RequestData) returns (Response);
}
message Request{
    
}
message RequestData{
    int64 idTask =1;
    int64 idUser =2;
}
enum Statues {
    UNKNOWN = 0;
    OK= 1;
    UNAUTHORIZED  = 2;
    NOT_FOUND = 3;
    FORBID = 4;
    BAD_REQUEST = 5;
}
message Response {
    Statues status = 1;
    string message = 2;
}
message TaskDescription{
    string name = 1;
    string description =2;
    string status = 3;
    string author = 4; 
    string role = 5;
}
message UserDescription{
    string name = 1;
    string surname = 2;
    string phone = 3;
    string profession =4;
}
message UserResponse{
    Response response = 1;
    repeated UserDescription tasks = 2;
}
message TaskResponse{
    Response response = 1;
    repeated TaskDescription tasks = 2;
}